--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -1,5 +1,6 @@
 .container{
-    width: 90%;
+    width: 100%;
+    padding: 0 5% 0 5%;
     margin: auto;
 }
 .burger-menu{
@@ -63,9 +64,11 @@
 }
 .col-8-md{
     width: 66.666%;
+    padding: 0.7rem;
 }
 .col-12-md{
     width: 100%;
+    
 }
 
 /* xs */
