--- a/assets/css/styless.css
+++ b/assets/css/styless.css
@@ -5,7 +5,7 @@ nav li{
 }
 /* desplazamiento del menu del top */
 .menuOutTop{
-    background-color: #0075ff;
+    background-color: blue;
     color: black;
     transition: 2s;
     
@@ -158,6 +158,7 @@ i{
     padding: 0.3rem;
     
 }
+
 .image h4{
     color:#775454;
     padding: 0.4rem;
@@ -233,7 +234,9 @@ progress{
     width: 100%;
     padding-bottom: 1.5rem;
 }
-
+.boxstudies img{
+    width: 100%;
+}
 /* Estilos estudies */
 .boxstudies{
     border: solid 1px black;
