--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -66,6 +66,10 @@
     width: 66.666%;
     padding: 0.7rem;
 }
+.col-9-md{
+    width: 75%;
+    padding: 0.7rem;
+}
 .col-12-md{
     width: 100%;
     
