--- a/assets/css/styless.css
+++ b/assets/css/styless.css
@@ -300,15 +300,12 @@ progress{
     background-color: white;
     width: 100%;
     text-align: center;
-    
 }
-/* Móviles */
-@media (min-width: 768px) { 
-
+footer{
+    background-color: rgb(0, 0, 0);
+    color:white;
+    font-weight: bold;
+    min-height: 90px;
+    padding: 30px;
+    margin:2rem 0 0 0;
 }
- 
-/* Tablets */
-@media (min-width: 1024px) {
-
-}
- 
